fix: Progress navigation disappears at some scrolling on small screens

--- a/_assets/css/_styles.scss
+++ b/_assets/css/_styles.scss
@@ -34,11 +34,12 @@ body {
     padding-top: 95px; // navbar-fixed-top height + 20px margin
 
     &.scroll {
-      padding-top: 70px;
+        padding-top: 70px;
     }
 
-    &.scroll-page {
-      height: auto !important;
+    &.scroll-page,
+    &.scroll-small-page {
+        height: auto !important;
     }
 }
 
@@ -3037,18 +3038,18 @@ span.all-components-expanded-icon {
 }
 
 /* Overrides the default which is from width 1240px, because to match our side-navigation behavior. */
-@media only screen and (min-width: 768px){
-  nav.TK-Nav {
-    position: sticky;
-    position: -webkit-sticky;
-    top: -40px;
-    transform: translateZ(0);
-    -webkit-transform: translateZ(0);
-  }
+@media only screen and (min-width: 768px) {
+    nav.TK-Nav {
+        position: sticky;
+        position: -webkit-sticky;
+        top: -40px;
+        transform: translateZ(0);
+        -webkit-transform: translateZ(0);
+    }
 }
 
 @media (min-width: 768px) { /* Styles for width >= 768px */
-  span.all-components-expanded-icon {
+    span.all-components-expanded-icon {
         display: none;
     }
 
