--- a/_buildApi/BuildAPI/docfx-tmpl/src/styles/docfx.css
+++ b/_buildApi/BuildAPI/docfx-tmpl/src/styles/docfx.css
@@ -8,7 +8,8 @@ body {
   height: 100%;
 }
 
-body.scroll-page {
+body.scroll-page,
+body.scroll-small-page, {
   height: auto !important; 
 }
 
